编写IngredientRepository接口并将其实现,使用Repository改造controller和Converter解决硬编码问题