@@ -4,6 +4,7 @@ import com.celestrong.tacocloud.pojo.entity.Ingredient;
 import com.celestrong.tacocloud.pojo.entity.Ingredient.Type;
 import com.celestrong.tacocloud.pojo.entity.Taco;
 import com.celestrong.tacocloud.pojo.entity.TacoOrder;
+import com.celestrong.tacocloud.repository.IngredientRepository;
 import jakarta.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
@@ -11,28 +12,27 @@ import org.springframework.ui.Model;
 import org.springframework.validation.Errors;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
 @Controller
 @Slf4j
 @RequestMapping("/design")
 @SessionAttributes("tacoOrder")
 public class DesignTacoController {
 
+    private final IngredientRepository  ingredientRepository;
+
+    public DesignTacoController(IngredientRepository ingredientRepository) {
+        this.ingredientRepository = ingredientRepository;
+    }
+
     @ModelAttribute
     public void addIngredientsToModel(Model model){
-        List<Ingredient> ingredients = Arrays.asList(
-                new Ingredient("FLTO", "Flour Tortilla", Type.WRAP),
-                new Ingredient("COTO", "Corn Tortilla", Type.WRAP),
-                new Ingredient("GRBF", "Ground Beef", Type.PROTEIN),
-                new Ingredient("CARN", "Carnitas", Type.PROTEIN),
-                new Ingredient("TMTO", "Diced Tomatoes", Type.VEGGIES),
-                new Ingredient("LETC", "Lettuce", Type.VEGGIES),
-                new Ingredient("CHED", "Cheddar", Type.CHEESE),
-                new Ingredient("JACK", "Monterrey Jack", Type.CHEESE),
-                new Ingredient("SLSA", "Salsa", Type.SAUCE),
-                new Ingredient("SRCR", "Sour Cream", Type.SAUCE)
-        );
+
+
+        Iterable<Ingredient> ingredients = ingredientRepository.findAll();
         Type[] types = Type.values();
         for (Type type : types) {
             model.addAttribute(type.toString().toLowerCase(),
@@ -41,11 +41,11 @@ public class DesignTacoController {
 
     }
 
-    List<Ingredient> filterByType(List<Ingredient> ingredients,Type type){
-        return ingredients
-                .stream()
-                .filter(ingredient -> ingredient.getType().equals(type) )
-                .toList();
+    List<Ingredient> filterByType(Iterable<Ingredient> ingredients,Type type){
+        return StreamSupport
+                .stream(ingredients.spliterator(),false)
+                .filter(ingredient -> ingredient.getType().equals(type))
+                .collect(Collectors.toList());
     }
 
     @ModelAttribute
